--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portfolio",
+  "homepage": "www.rupeshsolanki.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +9,12 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.64.0",
+    "react-pdf": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-social-icons": "^5.0.0",
+    "react-typing-effect": "^2.0.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
